--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voltura</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
 </head>
 <body>
     <div class="banner">
-        
+        <div class="navbar">
+            <img src="logo.png" alt="logo" class="logo">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Model</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Offers</a></li>
+                <li><a href="#">News</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <h1>
+                Ready to Race
+            </h1>
+            <p>
+                Voltura is a new generation of racing cars that are designed for speed and endurance
+            </p>
+        </div>
     </div>
 </body>
 </html>
