--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
                 Ready to Race
             </h1>
             <p>
-                Voltura is a new generation of racing cars that are designed for speed and endurance
+                Voltura is a new generation of racing cars <br>
+                 that are designed for speed and endurance
             </p>
+            <div>
+                <button type="button"><span></span>Let's Race</button>
+                <button type="button"><span></span>Pit Crew</button>
+            </div>
         </div>
     </div>
 </body>
